tests/ui/parser/misspelled-keywords/let-mut.stderr
error: expected one of `:`, `;`, `=`, `@`, or `|`, found `a`
  --> $DIR/let-mut.rs:2:14
   |
LL |     let muta a = 10;
   |              ^ expected one of `:`, `;`, `=`, `@`, or `|`
   |
help: there is a keyword `mut` with a similar name
   |
LL -     let muta a = 10;
LL +     let mut a = 10;
   |

error: aborting due to 1 previous error

